--- a/Thesis/slotbeschouwingen.tex
+++ b/Thesis/slotbeschouwingen.tex
@@ -15,7 +15,7 @@ Een eerste bijdrage van dit eindwerk is het herschrijven van de beschouwde
 vaagsimilariteitsmaten naar een vorm die, onder bepaalde voorwaarden, een stuk
 sneller kan berekend worden. 
 
-We hebben twee types van similariteitsmaten voor beelden besproken.
+We hebben twee types van similariteitsmaten besproken.
 De maten van het eerste type, waarbij het universum bestaat uit beeldpunten, 
 noemen we pixelgebaseerde similariteitsmaten. Similariteitsmaten die 
 beelden rechtstreeks interpreteren als vaagverzamelingen en vervolgens 
